# sanic_web_api

./: .env.exmaple  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
migration/: env.py
migration/versions/: 064d3b0aff02_add_test_data.py  5a66a3540ce0_initial_revision.py
sanic_session/: __init__.py  aioredis.py  base.py
src/: base.py  config.py  database.py  server.py
src/api_v1/: __init__.py
src/api_v1/accounts/: api.py  models.py  schemas.py
src/api_v1/transactions/: api.py  models.py  schemas.py
src/api_v1/users/: api.py  models.py  schemas.py
tests/: sanic_web_api.postman_collection.json
